--- a/lcd16x2x8bits_103/lcd16x2x8bits_103.ioc
+++ b/lcd16x2x8bits_103/lcd16x2x8bits_103.ioc
@@ -1,6 +1,6 @@
 #MicroXplorer Configuration settings - do not modify
 File.Version=6
-I2C1.I2C_Mode=I2C_Fast
+I2C1.I2C_Mode=I2C_Standard
 I2C1.IPParameters=I2C_Mode
 KeepUserPlacement=false
 Mcu.Family=STM32F1
